notes from class

--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -33,9 +33,9 @@ LW & BM: Word embeddings are increasingly being used by researchers in novel way
 
 BM: Word embeddings have been used as evidence in studies of historical change in language and culture [@phillips2017intrinsic; @heuser2017word; @kulkarni2015statistically; @pivovarova2019word]. Semantic relations between words in a corpus are captured by the geometry of the vectors, so vectors can be compared with each other to find a word’s nearest neighbors [@giorcelli2019does].  Vectors can be compared across periods to examine the degree of change a word underwent from one-time interval to the next. For example, @hamilton2016diachronic use word embeddings to study semantic change in English over the last 200 years. They visualise how the word 'gay' shifted from meaning 'cheerful' or 'frolicsome' to referring to homosexuality, and the change in 'broadcast' from referring to 'casting out seeds' to 'transmitting signals', with the rise of television and radio in the early 20th century. @yao2018dynamic generate word embeddings on 99,872 articles from the New York Times, published between January 1990 and July 2016 and their results show major semantic shifts in their words of interest. For example, the word embeddings for the US president names, Obama and Trump, shift from their pre-presidential lives (Obama as a civil rights attorney and university professor; Trump as a real estate developer and TV personality) to the political sphere.
 
-LW:  Word embeddings have also been used to track demographic and occupational social shifts and gender stereotypes. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They created word embeddings from different sources after 1900, including Google News, Google Books, and Corpus of Historical American English using Word2vex algorithm and New York Times, Wikipedia, and Common Crawl using GloVe algorithm. They made custom lists of group words representing gender and ethnicity, and neutral words, such as adjectives and jobs, serving as indicators for stereotypes and attitudes. For example, group words of man consists of he, man, boy, etc., and group words of Asian represented by last names such as li, wong, kim, etc. They compared the association between each group words (gender and ethnic minorities) and neutral words, where the strength of association is calculated by computing average embedding distance. Their results show that jobs such as nurses, dancers, housekeepers are biased toward women and there is an increase in adjectives for describing competence, such as intelligent, after women’s movement in the 1960s-1970s with higher participation rate in jobs. Another bias is the jobs of Asian-American were associated with academic positions reflecting the stereotype of the model minority, and their adjectives shift from negative words describing outsiders before 1950 to stereotype words about personality trait after 1950, with a growth of Asian-American population. This study demonstrates a successful use of word embeddings to detect semantic change in social bias over time with its sociocultural background.
+LW:  Word embeddings have also been used to track demographic and occupational shifts and gender stereotypes. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They used word embeddings from different sources after 1900, including Google News, Google Books, and the Corpus of Historical American English using the word2vec algorithm and New York Times using the GloVe algorithm. They extracted word embeddings for sets of words representing gender (e.g. he, man, boy, etc.) and ethnicity (e.g. last names such as Li, Wong, Kim), and a set of neutral words, such as adjectives and job titles, serving as indicators for stereotypes and attitudes. They compared the association of word vectors between each set words (gender and ethnic minorities) and neutral words, where the strength of association is calculated by computing average embedding distance. Their results show that jobs such as nurses, dancers, housekeepers have been biased toward women and there is an increase in adjectives for describing women's competence, such as intelligent, after the women’s movement in the 1960s-1970s, with higher participation rates in jobs. Another bias is the jobs of Asian-Americans which were associated with academic positions, reflecting the stereotype of the model minority, and their adjectives shift from negative words describing outsiders before 1950 to stereotype words about personality traits after 1950, with the growth of the Asian-American population. This study demonstrates a successful use of word embeddings to detect semantic change over time that reveal social biases that correspond to broader sociocultural contexts.
 
-LW: Another example shows how word embeddings are effective for identifying semantic changes in shared understandings of social classes in the 20th century in the US. @Kozlowski analyzed word embeddings generated on millions of books from Google Ngrams texts between 1990 and 2012 using the word2Vec algorithm with the GloVe algorithm as a cross-validation. The results suggest that 'employment', one of the class dimensions, shows most of the semantic changes from titles of formal office, such as 'lords' and 'governor', to 'promoter' and 'mogul` referring to economic status with power. Similarly, the class dimension 'employee' shifts from 'wage' and 'earners' in the early 20th century, 'soldier' during World War I, to 'retirement' and 'qualified' in the end of the century, reflecting the emergence of middle-class. They also found a close relationship between word embeddings in the classes, including education, morality, and cultivation, over time despite there is a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends by exploring social classes.
+LW: Another example shows how word embeddings are effective for identifying semantic changes in shared understandings of US social classes in the 20th century. @Kozlowski used the word2vec algorithm to generate word embeddings from millions of books published between between 1900 and 2012 that are available in the Google Ngrams corpus. <!-- need to prepare the reader: what are the class dimension and how were they identified? capture a sense of that they project word embeddings on a project for each cultural dimension --> The results suggest that 'employment', one of the class dimensions, shows substantial semantic changes. For example, titles of formal office, such as 'lords' and 'governor', change to 'promoter' and 'mogul', which are positions of economic status with power. Similarly, the class dimension 'employee' shifts from an association with words like 'wage' and 'earners' in the early 20th century, and 'soldier' during World War I, to 'retirement' and 'qualified' in the end of the century. This reflects the emergence of a middle-class in the US. They also found a close relationship between word embeddings in the classes, including education, morality, and cultivation, over time despite there is a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends by exploring social classes. <!-- check all the sentences to make sure the main ideas flow nicely through the entire paragraph -->
 
 # Methods
 
@@ -63,11 +63,9 @@ LW: The PDFs for the years 1962-1994 contain images of pages, and after 2005 the
 
 LW: We transformed the cleaned text into a document-feature matrix. This is a rectangular, tabular data structure where one row represents one PDF, and one column represents one word, also known as a feature. The cell values in this matrix are the frequencies of each feature for each PDF. We selected the features that occur at least three times across all PDFs for construction of a feature co-occurrence matrix. To create this matrix we calculated how often each feature appears with another. The co-occurrences are measured within a defined range of surrounding words, known as a window, with the target feature in the middle position and context features before and after it. Here we set the range to five, meaning five words before and five words after the target feature, as our framework for calculating the co-occurrence counts. 
 
-LW: We generated the word embeddings on the co-occurrence matrix using the GloVe algorithm from the text2vec package for R [@Pennington2014; @Selivanov2016]. GloVe (Global Vectors) is an unsupervised learning model that creates word vectors to represent semantic regularity and capture relationships between words [@Pennington2014; @Garg2018]. The general idea underlying the model is that the multiplied value of word vectors i and j will meet the logarithm of the co-occurrence count of word i and j in the matrix. Following this principle, GloVe performs a logistic regression continuously for every word along the text to decide vector values by maximizing the probability of a surrounding word with the occurrence of a center word. It involves three steps to complete this task. First, it adds intercepts associated with each word in a pair to compensate for the difference between the average of a word vector and its weighted sum. Second, it minimizes the sum of all squared errors from the previous step by giving weight to vectors with a function. Third, it deals with word pairs with large co-occurrence count to avoid a skewed number. Finally, GloVe generates two sets of word vectors as the roles of words (i.e. as a center or a surrounding word) in each pair can be reversed when GloVe algorithm moving through. The final output of word vectors is the sum of these two sets of values. 
+LW: We generated the word embedding on the co-occurrence matrix using the GloVe algorithm from the text2vec package for R [@Pennington2014; @Selivanov2016]. GloVe (Global Vectors) is an unsupervised learning algorithm that creates word vectors to represent semantic regularities and capture relationships between words [@Pennington2014]. The general idea is that the multiplied value of the final word vectors for any two words will be equivalent to the logarithm of those words' probability of co-occurrence. To achieve this, GloVe performs a weighted least squares regression for every word continuously along the text to generate vector values by maximizing the probability of a surrounding word with the occurrence of a center word. GloVe generates two sets of word vectors for each word (i.e. for the word as a center word or a surrounding word), and final word vector is the sum of these two sets of values. 
 
-<!-- one paragraph of plain and simple description of how Glove computes word vectors from co-oc matrix -->
-
-BM: One of the key practical challenges of studying temporal change in word embeddings is aligning the vectors representing the same words across multiple time periods. This is because the stochastic nature of word embeddings algorithms makes them generate representations that always have different coordinate systems and thus one set of embeddings are are not directly comparable to another set generated on a different corpus (i.e. from a different time period). Previous work generally follows a two-step pattern: first compute word embeddings in each time slice separately, then find a way to align the word embeddings across time slices. @kim2014temporal generated word embeddings for each time period by initializing them with the embeddings from the previous period. @kulkarni2015statistically compute a linear transformation of words between any two time slices by solving a n-dimensional least squares problem of k nearest neighbor words (where n is the embedding dimension). @zhang2016past similarly use a linear transformation between a base and target time slices, and compute the linear transformation using anchor words that does not change meaning between the two time slices (requiring prior knowledge of words that are static). @hamilton2016diachronic solves a n-dimensional Procrustes problem between every two adjacent time slices to perform the alignment. These alignment procedures are complex, and @dubossarsky2017outta show that they suffer from biases and produce spurious results. @dubossarsky2019time show that an alternative method, temporal referencing, avoids these concerns about previous alignment methods using a radically simpler procedure. Temporal referencing combines all time-specific corpora into one corpus, and generates word embeddings on this full corpus. Before generating the embeddings, they first replace each instance of the target word with a time-specific token. For example, the word 'theory' is replaced by the time-specfic token 'theory (1970-1980)' in the meeting abstracts from the years 1970-1980, and 'theory (1980-1990)' in the meeting abstracts from the years 1980-1990, and so on for each time slice. Then a single space is generated that contains a vector for each time-specific token, and the coordinates of the background, or context, words remain the same for each time slice, with no need for alignment. Besides the advantage of avoiding alignment, this temporal referencing method lowers data requirements (because context words are collapsed, and thus shared across time slices) and is suitable for smaller corpora, producing smooth change values without millions of words. A key assumption of this approach, as with the alignment methods, is that the semantics of the context words stay relatively stable over time.
+BM: One of the key practical challenges of studying temporal change in word embeddings is aligning the vectors representing the same words across multiple time periods. This is because the stochastic nature of word embeddings algorithms makes them generate representations that always have different coordinate systems and thus one set of embeddings are are not directly comparable to another set generated on a different corpus (i.e. from a different time period). Previous work generally follows a two-step pattern: first compute word embeddings in each time slice separately, then find a way to align the word embeddings across time slices. @kim2014temporal generated word embeddings for each time period by initializing them with the embeddings from the previous period. @kulkarni2015statistically compute a linear transformation of words between any two time slices by solving a n-dimensional least squares problem of k nearest neighbor words (where n is the embedding dimension). @zhang2016past similarly use a linear transformation between a base and target time slices, and compute the linear transformation using anchor words that does not change meaning between the two time slices (requiring prior knowledge of words that are static). @hamilton2016diachronic solves a n-dimensional Procrustes problem between every two adjacent time slices to perform the alignment. These alignment procedures are complex, and @dubossarsky2017outta show that they suffer from biases and produce spurious results. @dubossarsky2019time show that an alternative method, temporal referencing, avoids these concerns about previous alignment methods using a radically simpler procedure. Temporal referencing combines all time-specific corpora into one corpus, and generates word embeddings on this full corpus. Before generating the embeddings, they first replace each instance of the target word with a time-specific token. For example, the word 'theory' is replaced by the time-specific token 'theory (1970-1980)' in the meeting abstracts from the years 1970-1980, and 'theory (1980-1990)' in the meeting abstracts from the years 1980-1990, and so on for each time slice. Then a single space is generated that contains a vector for each time-specific token, and the coordinates of the background, or context, words remain the same for each time slice, with no need for alignment. Besides the advantage of avoiding alignment, this temporal referencing method lowers data requirements (because context words are collapsed, and thus shared across time slices) and is suitable for smaller corpora, producing smooth change values without millions of words. A key assumption of this approach, as with the alignment methods, is that the semantics of the context words stay relatively stable over time.
 
 BM: Once the embeddings had been generated, we visualized the word vector values to explore the historical trends of word meanings in archaeology. We first subset the corpus to identify the words that are semantically similar to our target word using the cosine distance measure on pairs of word vectors. These similar words become the context words that map the semantic space that our target word moves through over time. Then we used the t-Distributed Stochastic Neighbor Embedding (t-SNE) method [@maaten2008visualizing] for constructing a two dimensional embedding of the word vectors to reduce the high dimensionality of the word vectors so they can projected on a scatter plot. t-SNE is a visualisation method that retaining the local structure of the data while also revealing some important global structure (such as clusters). This is useful for placing similar words close together on the plot, while maximizing the distance between dissimilar words. While t-SNE is highly flexible, and can often find structure where other dimensionality-reduction algorithms, such as PCA, cannot [@balamurali2016t], it can produce plots that are difficult to interpret, and some elements can be highly senstive to different hyperparameter settings, for example the size of the clusters and inter-cluster distances [@wattenberg2016how]. A key limitation is that because t-SNE is non-linear (compared to PCA which is a linear transformation) and adapts to the underlying data, performing different transformations on different regions of the data, t-SNE plots are not easily interpretable in terms of the axes/units of the original, high-dimensional data.  
 
@@ -92,7 +90,7 @@ source(here::here("code/006-testing-word-2-vec-temporal-referencing-by-period.R"
 
 
 - basic details (e.g. word and abstract counts)
-- word frequency time series
+-- word frequency time series
 - TR plots
 
 # Discussion
