edit the para in the background section

--- a/documents/paper.Rmd
+++ b/documents/paper.Rmd
@@ -35,7 +35,7 @@ BM: Word embeddings have been used as evidence in studies of historical change i
 
 LW:  Word embeddings have also been used to track demographic and occupational shifts and gender stereotypes. For example, @Garg2018 explored changes in gender stereotypes and attitudes toward ethnic minorities in the 20th and 21st centuries in the US. They used word embeddings from different sources after 1900, including Google News, Google Books, and the Corpus of Historical American English using the word2vec algorithm and New York Times using the GloVe algorithm. They extracted word embeddings for sets of words representing gender (e.g. he, man, boy, etc.) and ethnicity (e.g. last names such as Li, Wong, Kim), and a set of neutral words, such as adjectives and job titles, serving as indicators for stereotypes and attitudes. They compared the association of word vectors between each set words (gender and ethnic minorities) and neutral words, where the strength of association is calculated by computing average embedding distance. Their results show that jobs such as nurses, dancers, housekeepers have been biased toward women and there is an increase in adjectives for describing women's competence, such as intelligent, after the women’s movement in the 1960s-1970s, with higher participation rates in jobs. Another bias is the jobs of Asian-Americans which were associated with academic positions, reflecting the stereotype of the model minority, and their adjectives shift from negative words describing outsiders before 1950 to stereotype words about personality traits after 1950, with the growth of the Asian-American population. This study demonstrates a successful use of word embeddings to detect semantic change over time that reveal social biases that correspond to broader sociocultural contexts.
 
-LW: Another example shows how word embeddings are effective for identifying semantic changes in shared understandings of US social classes in the 20th century. @Kozlowski used the word2vec algorithm to generate word embeddings from millions of books published between between 1900 and 2012 that are available in the Google Ngrams corpus. <!-- need to prepare the reader: what are the class dimension and how were they identified? capture a sense of that they project word embeddings on a project for each cultural dimension --> The results suggest that 'employment', one of the class dimensions, shows substantial semantic changes. For example, titles of formal office, such as 'lords' and 'governor', change to 'promoter' and 'mogul', which are positions of economic status with power. Similarly, the class dimension 'employee' shifts from an association with words like 'wage' and 'earners' in the early 20th century, and 'soldier' during World War I, to 'retirement' and 'qualified' in the end of the century. This reflects the emergence of a middle-class in the US. They also found a close relationship between word embeddings in the classes, including education, morality, and cultivation, over time despite there is a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends by exploring social classes. <!-- check all the sentences to make sure the main ideas flow nicely through the entire paragraph -->
+LW: Another example shows how word embeddings are effective for identifying semantic changes in shared understandings of US social classes in the 20th century. @Kozlowski used the word2vec algorithm to generate word embeddings from millions of books published between 1900 and 2012 that are available in the Google Ngrams corpus. They first constructed cultural dimensions of class that commonly discussed in sociological theory from word embeddings, including affluence, occupation, education, states, and cultivated taste. They then projected word embeddings that consist of sets of antonym pairs on a project for each cultural dimension as new dimensions to see their relationships. For instance, dimensions of rich-poor, priceless-worthless, and prosperous-bankrupt were projected on to the affluence dimension. The most interesting result is that 'employment', the occupation dimension, shows substantial semantic changes. For example, titles of formal office, such as 'lords' and 'governor', change to 'promoter' and 'mogul', which are positions of economic status with power. Similarly, 'employee', another occupation dimension, shifts from an association with words like 'wage' and 'earners' in the early 20th century, and 'soldier' during World War I, to 'retirement' and 'qualified' in the end of the century. This reflects the emergence of a middle-class in the US. They also found a close relationship between word pairs across different cultural dimensions, including education, morality, and cultivated taste, over time despite there is a major shift in the condition of economy, industry, and employment in the present day. This case study indicates the robustness of word embeddings as a method to examine historical trends by exploring social classes.
 
 # Methods
 
